# neuriplo-infer

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.md  docker_run_inference_e2e_example.sh  docker_run_inference_example.sh  versions.env
.cursor/rules/: gitflow-workflow.mdc  new-task-type-checklist.mdc
.devcontainer/: devcontainer.json
.githooks/: pre-push
.github/actions/fetch-neuriplo-versions/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  e2e-example-emulation.yml  ensure-release-latest.yml  github-release.yml  kserve-integration.yml  lint.yml  publish-github-release.yml  release-guard.yml
app/: CMakeLists.txt  main.cpp
app/inc/: AppConfig.hpp  CLICommands.hpp  CommandLineParser.hpp  InferencePipeline.hpp  KserveClient.hpp  KserveEngine.hpp  KserveGrpcClient.hpp  KserveHttpClient.hpp  KserveProtocol.hpp  KserveRetry.hpp  KserveTypes.hpp  NeuriploInfer.hpp  NeuriploInferApp.hpp  ResultRenderer.hpp  TaskRouting.hpp  VisionApp.hpp  utils.hpp
app/inc/contract/: InferenceInterface.hpp  InferenceMetadata.hpp
app/src/: CLICommands.cpp  CommandLineParser.cpp  InferencePipeline.cpp  KserveClient.cpp  KserveEngine.cpp  KserveGrpcClient.cpp  KserveHttpClient.cpp  KserveProtocol.cpp  KserveRetry.cpp  NeuriploInfer.cpp  NeuriploInferApp.cpp  NeuriploInferProcessing.cpp  NeuriploInferRendering.cpp  NeuriploInferTaskRouting.cpp  ResultRenderer.cpp  VisionApp.cpp  VisionAppProcessing.cpp  VisionAppRendering.cpp  VisionAppTaskRouting.cpp  utils.cpp
app/test/: CMakeLists.txt  kserve_integration.sh  test_InferencePipelineBuilder.cpp  test_KserveEngine.cpp  test_KserveProtocol.cpp  test_KserveRetry.cpp  test_KserveSecurity.cpp  test_NeuriploInfer.cpp  test_NeuriploInferApp.cpp  test_ObjectDetectionApp.cpp  test_VisionApp.cpp  test_docker_run_inference_e2e_example.sh  test_main.cpp  test_parseCommandLineArguments.cpp  test_utils.cpp
cmake/: AddCompileDefinitions.cmake  DependencyValidation.cmake  LinkBackend.cmake  Sanitizers.cmake  versions.cmake
docker/: Dockerfile.executorch  Dockerfile.libtensorflow  Dockerfile.libtorch  Dockerfile.litert  Dockerfile.llamacpp  Dockerfile.onnxruntime  Dockerfile.openvino  Dockerfile.tensorrt
docs/: ARCHITECTURE.md  DependencyManagement.md  ExportInstructions.md  FasterCompilationPlan.md  KserveCompatibility.md  KserveRoadmap.md  KserveRuntime.md  Roadmap.md  VLMImageUnderstanding.md  Versioning.md  feature-merge-roadmap.md
ops/: CLUSTER_MAP.yaml  README.md
ops/repo-meta/: neuriplo-infer.yaml  neuriplo-tasks.yaml  neuriplo.yaml
ops/runbooks/: cross-repo-api-migration.md  vlm-task-wiring.md
proto/: kserve_grpc.proto
scripts/: check_code_quality.sh  cut_release.sh  extract_changelog_release_notes.sh  publish_github_release.sh  setup_dependencies.sh  setup_executorch.sh  setup_litert.sh  sync_supported_model_types.py  validate_release_pins.sh
